[package]
name = "jester_sharing"
version = "0.1.0"
authors = ["Cydhra <ubezl@student.kit.edu>"]
edition = "2018"

[dependencies]
num = "0.2.0"
num-bigint = { version = "0.2.3", features = ["rand"] }
rand = "0.5.6"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
jester_maths = { path = "../jester_maths" }
once_cell = "1.2.0"
typemap = "0.3.3"
lazy_static = "1.4.0"
jester_sharing_proc = { path = "jester_sharing_proc"}

[dev-dependencies]
mashup = "0.1.9"
